# Bevy-Jam-5

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: release.yaml
asset_sources/: battery.blend  hub.blend  hub.blend1  pyramid.blend  shelter.blend  temple_test.blend  temple_test.blend1  tower.blend
assets/: registry.json
assets/audio/: LICENSES
assets/environment_maps/: main_diffuse_rgb9e5_zstd.ktx2  night_02_diffuse_rgb9e5_zstd.ktx2  night_diffuse_rgb9e5_zstd.ktx2
assets/levels/: Battery.glb  Hub.glb  Pyramid.glb  Scene.glb  Shelter.glb  Tower.glb
assets/models/: temple.glb
assets/models/beacon/: segment.glb  top_off.glb
assets/shaders/: common.wgsl  sand.wgsl  sandstorm.wgsl  simplex_vec3f.wgsl
nix/: blender.nix  default.nix  rust.nix
src/: beacon.rs  debug.rs  input.rs  main.rs  util.rs
src/audio/: ambient.rs  mod.rs  sfx.rs
src/battery/: mod.rs
src/beacon/: mod.rs
src/camera/: flycam.rs  follow.rs  mod.rs  spawn.rs
src/game/: checkpoint.rs  mod.rs
src/game/end_cycle/: mod.rs
src/game/in_cycle/: mod.rs
src/game/intro/: mod.rs
src/game/lost/: mod.rs
src/game/monolith/: mod.rs
src/game/won/: mod.rs
src/loddy/: d2.rs  mod.rs
src/loddy/ring/: into_iter.rs  (+3 more)
src/materials/: mod.rs  sand.rs
src/menu/: mod.rs  styling.rs
src/movement/: ground.rs  mod.rs
src/player/: beacon.rs  mod.rs  spawn.rs
src/pyramids/: mod.rs
src/sandstorm/: mod.rs  post_process.rs  sound.rs
src/settings/: fs.rs  mod.rs
src/shelter/: mod.rs
src/storm/: mod.rs
src/terrain/: mod.rs
src/tower/: clock.rs  mod.rs
wasm/: index.html
(+8 files in other folders)
