[package]
name = "bevy_jam_5"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = "0.1.1"
bevy = {version = "0.14.0", features = ["x11", "webgl2"]}
bevy-inspector-egui = "0.25.1"
blenvy = { git = "https://github.com/kaosat-dev/Blenvy", branch = "blenvy" }
directories = "5.0.1"
leafwing-input-manager = "0.14.0"
ron = "0.8.1"
serde = { version = "1.0.204", features = ["derive"] }
