[package]
name = "way_of_the_sand"
version = "0.1.0"
edition = "2021"

[features]
dev = ["bevy-inspector-egui"]

[dependencies]
avian3d = "0.1.1"
bevy = "0.14.0"
bevy-inspector-egui = { version = "0.25.1", optional = true }
blenvy = { git = "https://github.com/kaosat-dev/Blenvy", branch = "blenvy" }
directories = "5.0.1"
leafwing-input-manager = "0.14.0"
ron = "0.8.1"
serde = { version = "1.0.204", features = ["derive"] }
noise = "0.9.0"
rand = "0.8.5"
bevy_kira_audio = { version = "0.20", features = ["mp3"] }
